# haskellbook

./: .travis.yml  LICENSE  README.md  haskellbook-exercises.cabal
app/Finger/: README.md  finger.cabal  finger.db
app/Finger/src/: Ctl.hs  Daemon.hs  Debug.hs  Lib.hs
app/Finger/src/Lib/Finger/: CtlParser.hs  DaemonParser.hs  User.hs
app/Finger/test/: CtlSpec.hs  DaemonSpec.hs
app/Fingerd/: Fingerd.cabal  README.md  finger.db
app/Fingerd/src/: Main.hs
app/Hangman/: Main.hs
app/Vigenere/: Main.hs
src/02-hello/: Hello.hs
src/03-strings/: Print3Broken.hs  Reverse.hs  Strings.hs
src/04-datatypes/: Datatypes.hs
src/05-types/: Arith3Broken.hs  Sing.hs  TypeKwonDo.hs  Types.hs
src/06-typeclasses/: EqIns.hs  TypeKwonDo.hs
src/07-funcy/: Case.hs  Funcy.hs
src/08-recursion/: Recursion.hs  WordNumber.hs
src/09-lists/: Char.hs  Cipher.hs  EnumFromTo.hs  PoemLines.hs  SquareCube.hs  Std.hs  Zipping.hs
src/10-folds/: Database.hs  Folds.hs  Warmup.hs
src/11-algebraic-datatypes/: AsPatterns.hs  BinaryTree.hs  Hutton.hs  Language.hs  LogicGoats.hs  Phone.hs  Programmers.hs  Vehicles.hs
src/12-adversity/: BinaryTree.hs  Either.hs  Iterate.hs  Maybe.hs  Nat.hs  Strings.hs  Word.hs
src/13-building/: Chapter.hs
src/14-testing/: Arbitrary.hs  CoArbitrary.hs  Multiplication.hs  testing.cabal
src/14-testing/morse/src/: Main.hs
src/Exercises/Adversity/: BinaryTree.hs  Either.hs  Iterate.hs  Maybe.hs  Nat.hs  Strings.hs  Word.hs
src/Exercises/Algebraic/: AsPatterns.hs  BinaryTree.hs  Hutton.hs  Language.hs  LogicGoats.hs  Phone.hs  Programmers.hs  Vehicles.hs
src/Exercises/Applicative/: Combinations.hs  Constant.hs  Identity.hs  List.hs  Main.hs  Validation.hs
src/Exercises/Building/: Main.hs
src/Exercises/Composing/: Compose.hs  Twinplicative.hs
src/Exercises/Datatypes/: Main.hs
src/Exercises/Foldable/: Library.hs  Main.hs
src/Exercises/Folds/: Database.hs  Main.hs  Warmup.hs
src/Exercises/Functor/: Instances.hs  Main.hs
src/Exercises/Funcy/: Case.hs  Main.hs
src/Exercises/Hangman/: Game.hs  Puzzle.hs
src/Exercises/Hello/: Main.hs
src/Exercises/Libraries/: DList.hs  Queue.hs  SetBench.hs  VectorBench.hs
src/Exercises/Lists/: Char.hs  Cipher.hs  EnumFromTo.hs  PoemLines.hs  SquareCube.hs  Std.hs  Zipping.hs
src/Exercises/Monad/: Either.hs  Main.hs
src/Exercises/Monoid/: Laws.hs  Main.hs  Optional.hs
src/Exercises/Nonstrict/: BottomIt.hs  StrictList.hs
src/Exercises/Parsers/: Base10Integer.hs  DOT.hs  Fractions.hs  IP.hs  Log.hs  Main.hs  PhoneNumbers.hs  Practice.hs  SemVer.hs
src/Exercises/Reader/: Main.hs  ReaderPractice.hs  Warmup.hs
src/Exercises/Recursion/: Main.hs  WordNumber.hs
src/Exercises/State/: FizzBuzz.hs  Moi.hs  Roll.hs
src/Exercises/Strings/: Main.hs  Print1.hs  Print2.hs  Print3.hs  Print3Broken.hs  Reverse.hs
src/Exercises/Testing/: Addition.hs  Generators.hs
src/Exercises/Testing/morse/src/: Morse.hs
src/Exercises/Transformers/: EitherT.hs  Fixit.hs  HitCount.hs  Main.hs  MonadIO.hs  MonadTrans.hs  Morra.hs  StateT.hs  WrapItUp.hs
src/Exercises/Traversable/: Main.hs
src/Exercises/Typeclasses/: EqIns.hs  TypeKwonDo.hs
src/Exercises/Types/: Arith3Broken.hs  Main.hs  Sing.hs  TypeKwonDo.hs
src/Hangman/: hangman.cabal
src/Hangman/src/: Puzzle.hs
src/Hangman/test/: Spec.hs
src/Shawty/app/: Main.hs
src/hangman/: hangman.cabal
src/hangman/src/: Game.hs  Main.hs
test/Exercises/Lists/: CipherSpec.hs
test/Exercises/Recursion/: WordNumberSpec.hs
test/Exercises/Testing/: IdempotenceSpec.hs  QuickCheckSpec.hs
test/Hangman/: PuzzleSpec.hs
