name:                 haskellbook-exercises
version:              0.1.0.0
synopsis:             My solutions to exercises in Haskell Programming from first principles by Christopher Allen and Julie Moronuki
homepage:             haskellbook.com
license:              BSD3
license-file:         LICENSE
author:               Michał Wyrwalski
maintainer:           michal.wyrwalski@datarino.com
build-type:           Simple
extra-source-files:   README.md, LICENSE
cabal-version:        >=1.10

library
  exposed-modules:    Exercises.Algebraic.Language
                    , Exercises.Lists.Cipher
                    , Exercises.Monoid.Laws
                    , Exercises.Monoid.Main
                    , Exercises.Monoid.Optional
                    , Exercises.Recursion.Main
                    , Exercises.Recursion.WordNumber
  build-depends:      base >=4.10 && <5
                    , containers
                    , QuickCheck
                    , checkers
                    , criterion
                    , parsers
                    , random
                    , raw-strings-qq
                    , scotty
                    , terminal-size
                    , text
                    , transformers
                    , trifecta
  hs-source-dirs:     src
  ghc-options:        -Wall -fwarn-tabs
  default-language:   Haskell2010

test-suite unit-tests
  ghc-options:        -Wall -fno-warn-orphans
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      Exercises.Recursion.WordNumberSpec
                    , Exercises.Lists.CipherSpec
                    , Exercises.Testing.IdempotenceSpec
                    , Exercises.Testing.QuickCheckSpec
  hs-source-dirs:     test
  default-language:   Haskell2010
  build-depends:      base >=4.7 && <5
                    , haskellbook-exercises
                    , hspec
                    , hspec-discover
                    , QuickCheck
