name:                 haskellbook-exercises
version:              0.1.0.0
synopsis:             My solutions to exercises in Haskell Programming from first principles by Christopher Allen and Julie Moronuki
homepage:             haskellbook.com
license:              BSD3
license-file:         LICENSE
author:               Michał Wyrwalski
maintainer:           michal.wyrwalski@datarino.com
build-type:           Simple
extra-source-files:   README.md, LICENSE
cabal-version:        >=1.10

library
  exposed-modules:    Exercises.Algebraic.Language
                    , Exercises.Lists.Cipher
                    , Exercises.Monoid.Laws
                    , Exercises.Monoid.Main
                    , Exercises.Monoid.Optional
                    , Exercises.Recursion.Main
                    , Exercises.Recursion.WordNumber
                    , Exercises.Hangman.Puzzle
                    , Exercises.Hangman.Game
  build-depends:      base >=4.10 && <5
                    , containers
                    , QuickCheck
                    , checkers
                    , criterion
                    , dlist
                    , parsers
                    , random
                    , raw-strings-qq
                    , scotty
                    , terminal-size
                    , text
                    , transformers
                    , trifecta
                    , vector
  hs-source-dirs:     src
  ghc-options:        -Wall -fwarn-tabs
  default-language:   Haskell2010

executable vigenere
  hs-source-dirs:     app/Vigenere
  main-is:            Main.hs
  build-depends:      base >=4.10 && <5
                    , haskellbook-exercises
  default-language:   Haskell2010

executable hangman
  hs-source-dirs:     app/Hangman
  main-is:            Main.hs
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5
                    , haskellbook-exercises
                    , random
                    , split

test-suite unit-tests
  ghc-options:        -Wall -fno-warn-orphans
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      Exercises.Recursion.WordNumberSpec
                    , Exercises.Lists.CipherSpec
                    , Exercises.Testing.IdempotenceSpec
                    , Exercises.Testing.QuickCheckSpec
                    , Hangman.PuzzleSpec
  hs-source-dirs:     test
  default-language:   Haskell2010
  build-depends:      base >=4.7 && <5
                    , haskellbook-exercises
                    , hspec
                    , hspec-discover
                    , QuickCheck
