name:                finger
version:             0.1.0.0
homepage:            https://github.com/githubuser/finger#readme
license:             BSD3
license-file:        LICENSE
author:              Michal Wyrwalski
copyright:           2018, Michal Wyrwalski
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Lib
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , text

executable debug
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Debug.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network

executable fingerd
  hs-source-dirs:      src
  main-is:             Daemon.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-modules:       Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , finger
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , text
                     
executable fingerctl
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Ctl.hs
  default-language:    Haskell2010
  other-modules:       Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , finger
                     , optparse-applicative
                     , raw-strings-qq
                     , sqlite-simple
                     , text
