name:                finger
version:             0.1.0.0
homepage:            https://github.com/githubuser/finger#readme
license:             BSD3
license-file:        LICENSE
author:              Michal Wyrwalski
copyright:           2018, Michal Wyrwalski
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Finger.User
                     , Finger.DaemonParser
                     , Finger.CtlParser
  ghc-options:         -Wall
  hs-source-dirs:      src/Lib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , optparse-applicative
                     , raw-strings-qq
                     , sqlite-simple
                     , text
                     , trifecta

executable debug
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Debug.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network

executable fingerd
  hs-source-dirs:      src
  main-is:             Daemon.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , finger
                     , network
                     , parsers
                     , raw-strings-qq
                     , sqlite-simple
                     , text
                     , trifecta
                     
executable fingerctl
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Ctl.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , finger
                     , optparse-applicative
                     , raw-strings-qq
                     , sqlite-simple
                     , text

test-suite unit-tests
  ghc-options:        -Wall -fno-warn-orphans
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  default-language:   Haskell2010
  other-modules:      DaemonSpec
                    , CtlSpec
  build-depends:      base >=4.7 && <5
                    , finger
                    , hspec
                    , hspec-discover
                    , optparse-applicative
                    , QuickCheck
                    , text
                    , trifecta
