name:                testing
version:             0.1.0.0
homepage:            haskellbook.com
author:              Michał Wyrwalski
maintainer:          michal.wyrwalski@datarino.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Addition
                     , Arbitrary
                     , CoArbitrary
                     , Multiplication
  -- other-modules:
  -- other-extensions:
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.10 && <5
                     , hspec
                     , QuickCheck
  hs-source-dirs:      .
  default-language:    Haskell2010
