name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
homepage:            https://github.com/haskellbook/hangman
license:             BSD3
license-file:        LICENSE
author:              Michał Wyrwalski
maintainer:          haskellbook.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Puzzle
                     , Game
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
